--- a/app/src/main/res/layout/fg_listitem.xml
+++ b/app/src/main/res/layout/fg_listitem.xml
@@ -33,7 +33,7 @@
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.15">
+                    android:layout_weight="0.2">
 
 
                     <RelativeLayout
@@ -42,13 +42,13 @@
                         >
 
                         <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:id="@+id/mfg_img_app"
                             android:src="@mipmap/ic_launcher"
+                            android:scaleType="fitXY"
                             android:layout_centerVertical="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentEnd="true" />
+                            android:layout_centerHorizontal="true" />
                     </RelativeLayout>
                 </LinearLayout>
 
@@ -56,7 +56,7 @@
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.55"
                     android:weightSum="1">
 
                     <LinearLayout
@@ -152,7 +152,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="13sp"
+                    android:textSize="12sp"
                     android:text="Small Text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="3dp"
