--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="color_787878">#787878</color>
 
     <color name="color_transparent">#00000000</color>
+
+    <color name="color_626262">#626262</color>
 </resources>
