--- a/app/src/main/res/layout/fg_listitem.xml
+++ b/app/src/main/res/layout/fg_listitem.xml
@@ -1,143 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:orientation="horizontal"
         android:weightSum="1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.06"></LinearLayout>
+            android:layout_weight="0.06"
+            android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
-            android:layout_weight="0.88"
             android:layout_height="match_parent"
+            android:layout_weight="0.88"
+            android:orientation="vertical"
             android:weightSum="1">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.7"
+                android:orientation="horizontal"
                 android:weightSum="1">
 
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.22">
+                    android:layout_weight="0.22"
+                    android:orientation="vertical">
 
-
-                    <RelativeLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        >
-
-                        <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:id="@+id/mfg_img_app"
-                            android:src="@mipmap/ic_launcher"
-                            android:scaleType="fitXY"
-                            android:layout_centerVertical="true"
-                            android:layout_centerHorizontal="true" />
-                    </RelativeLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.58"
-                    android:weightSum="1">
-
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.4">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Medium Text"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="10dp"
-                            android:id="@+id/mfg_tv_appname" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.3">
-
-                        <RatingBar
-                            android:id="@+id/mfg_rb_ratingBar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="15dp"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            style="@style/fiveRatingBar"
-                            android:isIndicator="true"
-                            android:numStars="5"
-                            android:rating="4" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.3">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="11sp"
-                            android:layout_marginLeft="5dp"
-                            android:text="Medium Text"
-                            android:layout_marginTop="5dp"
-                            android:id="@+id/mfg_tv_appsize" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.25"
-                    android:layout_height="match_parent">
 
                     <RelativeLayout
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent">
 
                         <ImageView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:id="@+id/fg_img_download"
-                            android:src="@mipmap/ic_download"
-                            android:paddingBottom="3dp"
+                            android:id="@+id/mfg_img_app"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_centerHorizontal="true"
                             android:layout_centerVertical="true"
-                            android:layout_centerHorizontal="true" />
+                            android:scaleType="fitXY"
+                            android:src="@mipmap/ic_launcher" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.58"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.4"
+                        android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/mfg_tv_appname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            android:text="@string/app_download"
-                            android:id="@+id/textView"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="10dp"
+                            android:text="Medium Text"
+                            android:textAppearance="?android:attr/textAppearanceMedium" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.3"
+                        android:orientation="horizontal">
+
+                        <RatingBar
+                            android:id="@+id/mfg_rb_ratingBar"
+                            style="@style/fiveRatingBar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="15dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="5dp"
+                            android:isIndicator="true"
+                            android:numStars="5"
+                            android:rating="4" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.3"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/mfg_tv_appsize"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="5dp"
+                            android:text="Medium Text"
+                            android:textSize="11sp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+
+                        <ImageView
+                            android:id="@+id/fg_img_download"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
                             android:layout_centerHorizontal="true"
-                            android:layout_below="@+id/fg_img_download" />
+                            android:layout_centerVertical="true"
+                            android:paddingBottom="3dp"
+                            android:src="@mipmap/ic_download" />
+
+                        <TextView
+                            android:id="@+id/tv_downpos"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/fg_img_download"
+                            android:layout_centerHorizontal="true"
+                            android:text="@string/app_download"
+                            android:textSize="12sp" />
                     </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -145,33 +144,34 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="0.01dp"
-                android:background="@color/color_gray"
-                />
+                android:background="@color/color_gray" />
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.3">
+                android:layout_weight="0.3"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/mfg_tv_intro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:text="Small Text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="3dp"
-                    android:id="@+id/mfg_tv_intro" />
+                    android:text="Small Text"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="0.06"
-            android:layout_height="match_parent"></LinearLayout>
+            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
+
     <View
         android:layout_width="fill_parent"
-        android:background="@color/color_line"
-        android:layout_height="5dp"></View>
+        android:layout_height="5dp"
+        android:background="@color/color_line"></View>
 </LinearLayout>
